Fix #hPreviewImageTitle padding and alignment in mobile

--- a/styles/body.css
+++ b/styles/body.css
@@ -8,3 +8,13 @@ body {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
+
+/* for demo */
+main {
+    background-image: url(../images/explore-the-summit/mount-pulag-joanne-caselyn-kCGhXLU32Bg-unsplash.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 200vh;
+}
